# ENGRAFT

./: CMakeLists.txt  README.md  do_compile.sh  interface.edl
cmake/: FindProtobuf.cmake
example/counter/: CMakeLists.txt  MYFindProtobuf.cmake  client.cpp  client_run.sh  cluster_run.sh  counter.pb.cc  counter.pb.h  counter.proto  rebuild.sh  server.cpp  sgx_raft.conf  stop.sh
src/braft/: ballot_box.cpp  ballot_box.h  builtin_service.pb.cc  builtin_service.pb.h  builtin_service_impl.cpp  builtin_service_impl.h  cli.cpp  cli.h  cli.pb.cc  cli.pb.h  cli_service.cpp  cli_service.h  closure_helper.h  closure_queue.cpp  configuration.cpp  configuration.h  enum.pb.cc  enum.pb.h  errno.pb.cc  errno.pb.h  file_reader.cpp  file_reader.h  file_service.cpp  file_service.h  file_service.pb.cc  file_service.pb.h  file_system_adaptor.cpp  file_system_adaptor.h  fsm_caller.cpp  fsm_caller.h  fsync.cpp  fsync.h  lease.cpp  local_file_meta.pb.cc  local_file_meta.pb.h  local_storage.pb.cc  local_storage.pb.h  local_storage.proto  log.cpp  log.h  (+45 more)
src/brpc/: acceptor.cpp  acceptor.h  adaptive_connection_type.cpp  adaptive_connection_type.h  adaptive_max_concurrency.cpp  adaptive_max_concurrency.h  adaptive_protocol_type.h  authenticator.h  builtin_service.pb.cc  builtin_service.pb.h  builtin_service.proto  callback.h  channel.cpp  channel.h  channel_base.h  closure_guard.h  compress.cpp  compress.h  controller.cpp  controller.h  describable.h  destroyable.h  errno.pb.cc  errno.pb.h  event_dispatcher.cpp  event_dispatcher.h  extension.h  extension_inl.h  global.cpp  grpc.cpp  http2.cpp  http_header.cpp  http_header.h  http_method.cpp  http_status_code.cpp  input_message_base.h  input_messenger.cpp  input_messenger.h  options.pb.cc  options.pb.h  (+23 more)
src/brpc/details/: controller_private_accessor.h  has_epollrdhup.cpp  hpack.cpp  hpack.h  http_message.cpp  http_message.h  mesalink_ssl_helper.cpp  method_status.cpp  method_status.h  profiler_linker.h  server_private_accessor.h  sparse_minute_counter.h  ssl_helper.cpp  ssl_helper.h
src/brpc/policy/: auto_concurrency_limiter.cpp  auto_concurrency_limiter.h  baidu_rpc_meta.pb.cc  baidu_rpc_meta.pb.h  baidu_rpc_meta.proto  baidu_rpc_protocol.cpp  baidu_rpc_protocol.h  constant_concurrency_limiter.cpp  constant_concurrency_limiter.h  gzip_compress.cpp.txt  gzip_compress.h.txt  hasher.cpp  hasher.h  http2_rpc_protocol.cpp  http2_rpc_protocol.h  http_rpc_protocol.cpp  http_rpc_protocol.h  most_common_message.h  snappy_compress.cpp  snappy_compress.h
src/bthread/: bthread.cpp  bthread.h  butex.cpp  butex.h  comlog_initializer.h  condition_variable.cpp  condition_variable.h  context.cpp  context.h  countdown_event.cpp  errno.cpp  errno.h  execution_queue.cpp  execution_queue.h  execution_queue_inl.h  fd.cpp  id.cpp  id.h  interrupt_pthread.cpp  key.cpp  mutex.cpp  mutex.h  parking_lot.h  processor.h  remote_task_queue.h  stack.cpp  stack.h  stack_inl.h  sys_futex.cpp  sys_futex.h  task_control.cpp  task_control.h  task_group.cpp  task_group.h  task_group_inl.h  task_meta.h  timer_thread.cpp  timer_thread.h  types.h  unstable.h  (+1 more)
src/google/gflags/: gflags.cc  gflags.h  gflags_completions.cc  mutex.h
src/google/protobuf/: config.h  descriptor.cc  descriptor.h  descriptor.pb.cc  descriptor.pb.h  descriptor_database.cc  descriptor_database.h  dynamic_message.cc  dynamic_message.h  extension_set.cc  extension_set.h  extension_set_heavy.cc  generated_message_reflection.cc  generated_message_reflection.h  generated_message_util.cc  generated_message_util.h  message.cc  message.h  message_lite.cc  message_lite.h  reflection_ops.cc  reflection_ops.h  repeated_field.cc  repeated_field.h  service.cc  service.h  text_format.cc  text_format.h  unknown_field_set.cc  unknown_field_set.h  wire_format.cc  wire_format.h  wire_format_lite.cc  wire_format_lite.h  wire_format_lite_inl.h
src/host/: CMakeLists.txt  duplicated_things.h  entry.cpp  host_event_dis.cpp  host_tpm_utils.cpp  host_tpm_utils.h  host_utils.cpp  host_utils.h
src/host/utils/: easylogging++.cc
src/host/working_queues/: mpmc_bounded.h  mpsc_vyukov.h  socket_write_queue.h
src/sgxbutil/: at_exit.cc  at_exit.h  atomic_ref_count.h  atomicops.h  atomicops_internals_x86_gcc.h  base64.cc  base64.h  base_export.h  basictypes.h  binary_printer.cpp  binary_printer.h  bit_array.h  compat.h  compiler_specific.h  ecall_helper.cpp  ecall_helper.h  enclave.cpp  enclave.h  endpoint.cpp  endpoint.h  errno.cpp  errno.h  fast_rand.cpp  fast_rand.h  fd_guard.h  fd_utility.cpp  fd_utility.h  file_descriptor_posix.h  file_util.cc  file_util.h  file_util_posix.cc  find_cstr.cpp  find_cstr.h  intrusive_ptr.hpp  iobuf.cpp  iobuf.h  iobuf_inl.h  logging.cc  logging.h  macros.h  (+30 more)
src/sgxbutil/attestation/: attestation_helper.cpp  attestation_helper.h
src/sgxbutil/containers/: bounded_queue.h  case_ignored_flat_map.cpp  case_ignored_flat_map.h  doubly_buffered_data.h  flat_map.h  flat_map_inl.h  hash_tables.h  linked_list.h
src/sgxbutil/files/: dir_reader_linux.h  dir_reader_posix.h  file.cc  file.h  file_enumerator.cc  file_enumerator.h  file_enumerator_posix.cc  file_path.cc  file_path.h  file_path_constants.cc  file_posix.cc  scoped_file.cc  scoped_file.h
src/sgxbutil/memory/: aligned_memory.cc  aligned_memory.h  ref_counted.cc  ref_counted.h  scoped_ptr.h  singleton.cc  singleton.h  singleton_on_pthread_once.h
src/sgxbutil/posix/: eintr_wrapper.h
src/sgxbutil/state_cont/: counter_list.pb.cc  counter_list.pb.h  counter_list.proto  counter_rpc.pb.cc  counter_rpc.pb.h  counter_rpc.proto  distri_counter.cpp  (+15 more)
src/switchless/: disk_file.cpp  disk_file.h  networking.cpp  networking.h  sys_time.cpp  sys_time.h
(+40 files in other folders)
